@@ -1,36 +1,43 @@
 package net.miarma.mkernel.recipes.tools;
 
-import de.tr7zw.nbtapi.NBTItem;
-import net.miarma.mkernel.MKernel;
-import net.miarma.mkernel.config.providers.MessageProvider;
-import net.miarma.mkernel.util.MessageUtil;
+import static net.miarma.mkernel.util.Constants.ADMIN_STICK_KEY;
+import static net.miarma.mkernel.util.Constants.RECIPES;
+import static net.miarma.mkernel.util.Constants.SPECIAL_ITEM_TAG;
+
+import java.util.List;
+
 import org.bukkit.Material;
 import org.bukkit.NamespacedKey;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.ShapedRecipe;
-import org.bukkit.inventory.meta.ItemMeta;
 
-import java.util.Collections;
-
-import static net.miarma.mkernel.util.Constants.*;
+import de.tr7zw.nbtapi.NBT;
+import net.kyori.adventure.text.Component;
+import net.miarma.mkernel.MKernel;
+import net.miarma.mkernel.config.providers.MessageProvider;
+import net.miarma.mkernel.util.MessageUtil;
 
 public class AdminStickRecipe {
 	public static ItemStack crear() {
         ItemStack stick = new ItemStack(Material.STICK);
-       
-        ItemMeta meta = stick.getItemMeta();
-        meta.setDisplayName(MessageUtil.parseColors(
+        Component name = Component.text(MessageUtil.parseColors(
                 MessageProvider.Items.getAdminStickName()));
-        meta.setLore(Collections.singletonList(MessageUtil.parseColors(
-                MessageProvider.Items.getAdminStickLore())));
+        List<Component> lore = List.of(
+    		Component.text(MessageUtil.parseColors(
+                MessageProvider.Items.getAdminStickLore())
+			)		
+		);
+                
+        NBT.modify(stick, nbt -> {
+        	nbt.setString(SPECIAL_ITEM_TAG, ADMIN_STICK_KEY);
+        	nbt.modifyMeta((readOnlyNbt, meta) ->{
+        		meta.displayName(name);
+        		meta.lore(lore);
+        	});
+        });
         
-        stick.setItemMeta(meta);
-        
-        NBTItem nbtItem = new NBTItem(stick);
-        nbtItem.setString(SPECIAL_ITEM_TAG, ADMIN_STICK_KEY);
-
-        RECIPES.add(nbtItem.getItem());
-        return nbtItem.getItem();
+        RECIPES.add(stick);
+        return stick;
     }
     
     public static ShapedRecipe get() {
